@@ -3,15 +3,15 @@ OpenEye-toolkits >= 2020.2.0
 numpy
 jsonschema >= 2.6.0
 rcsb.utils.io >= 1.00
-rcsb.db >= 1.667
+rcsb.db >= 1.674
 rcsb.utils.chemref >= 0.65
 rcsb.utils.chem >= 0.70
 rcsb.utils.citation >= 0.15
 rcsb.utils.config >= 0.35
 rcsb.utils.ec >= 0.21
 rcsb.utils.go >= 0.17
-rcsb.utils.seq >= 0.50
+rcsb.utils.seq >= 0.60
 rcsb.utils.struct >= 0.26
 rcsb.utils.taxonomy >= 0.31
-rcsb.utils.dictionary >= 0.24
+rcsb.utils.dictionary >= 0.34
 statistics; python_version < "3.0"
