@@ -43,17 +43,17 @@ setup(
         "jsonschema >= 2.6.0",
         "numpy",
         "rcsb.utils.io >= 1.00",
-        "rcsb.db >= 1.667",
+        "rcsb.db >= 1.674",
         "rcsb.utils.chemref >= 0.65",
         "rcsb.utils.chem >= 0.70",
         "rcsb.utils.citation >= 0.15",
         "rcsb.utils.config >= 0.35",
-        "rcsb.utils.seq >= 0.50",
+        "rcsb.utils.seq >= 0.60",
         "rcsb.utils.ec >= 0.21",
         "rcsb.utils.go >= 0.17",
         "rcsb.utils.struct >= 0.26",
         "rcsb.utils.taxonomy >= 0.31",
-        "rcsb.utils.dictionary >= 0.24",
+        "rcsb.utils.dictionary >= 0.34",
         'statistics; python_version < "3.0"',
     ],
     packages=find_packages(exclude=["rcsb.mock-data", "rcsb.exdb.tests-anal", "rcsb.exdb.tests-*", "tests.*"]),
