@@ -157,12 +157,12 @@ whitelist_externals = echo
 basepython = py39: python3.9
 deps =
     echo
-    black>=20.8b1
+    black>=21.5b1
     -r requirements.txt
     #    isort>=4.3.20
 commands =
     echo "Starting {envname}"
-    black --check --line-length 180  {[local_settings]source_paths}
+    black --check --line-length 185  {[local_settings]source_paths}
     #    isort -rc rcsb/utils --check-only
     echo "Completed {envname}"
 
